# HIS-EMR

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE-VISUAL.html  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Dockerfile.migrate  alembic.ini  docker-compose.yml  next.config.ts  package-lock.json  package.json  prisma.config.ts  pyproject.toml  server.js
.github/workflows/: cd.yml  ci.yml  main_his-emr.yml
alembic/: env.py
alembic/versions/: 003_add_agent_tables.py  004_add_memory_tables.py
data/: medbridge.db  medbridge.db-shm  medbridge.db-wal
data/outbound/: msg_1773004088490.hl7
deployment/: docker-compose.prod.yml
deployment/pipelines/: azure-pipelines-build.yml
deployment/scripts/: deploy.sh  init-databases.sql  nginx.conf  setup-dns-ssl.sh
deployment/wiki/: ADO-Pipeline-Guide.md  Architecture.md  DNS-SSL-Setup.md  Deployment-Guide.md  Environment-Configuration.md  Home.md  Troubleshooting.md
docker/: init-db.sql
docs/: AGENT_ROBUSTNESS_BLUEPRINT.md  AGENT_SPEC.md  HEALTHCARE_INTEGRATION_FLOW.md
frontend/: Dockerfile  nginx.conf  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
prisma/: schema.prisma  seed-demo.ts  seed-rich.ts  seed.ts
public/: index.html
public/css/: index.css
public/js/: app.js
src/: middleware.ts
src/aegisforge/: __init__.py  api.py  config.py  dependencies.py  health.py  main.py
src/ai/: AgentBridge.js  DischargeOrchestrator.js  PHIGuard.js  PriorAuthEngine.js  TaskRouter.js
src/app/: globals.css  layout.tsx
src/channels/: Channel.js
src/connectors/: DatabaseConnector.js  FileConnector.js  HTTPConnector.js  TCPConnector.js
src/database/: db.js  schema.sql
tests/: conftest.py  test_agent_approval.py  test_agent_models.py  test_agent_orchestrator.py  test_agent_routes.py  test_agent_scheduler.py  test_audit_redactor.py  test_auth_rbac.py  test_config.py  test_health.py  test_llm_client.py  test_llm_models.py  test_memory.py  test_multi_agent.py  test_observability.py  test_planner_models.py  test_rag_chunker.py  test_rag_pipeline.py  test_validation.py  test_workflows.py
(+318 files in other folders)
